<resources>
    <string name="app_name">TodoMovies</string>
    <string name="cartaz_do_filme">Cartaz do filme</string>
    <string name="cartaz_do_filme_relacionado">Cartaz do filme relacionado</string>
    <string name="filmes_relacionados">Filmes relacionados:</string>
    <string name="botao_de_favoritar">Botão de favoritar com ícone de coração</string>
    <string name="icone_em_forma_de_coracao">Ícone em forma de coração</string>
    <string name="icone_em_forma_de_circulo">Ícone em forma de circulo</string>
    <string name="botao_voltar">Botão voltar</string>
</resources>