<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black">

    <ImageView
        android:id="@+id/detalhes_filmes_iv_cartaz_filme"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:contentDescription="@string/cartaz_do_filme"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/botao_voltar"
        android:cropToPadding="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="@id/detalhes_filmes_iv_cartaz_filme"
        app:layout_constraintTop_toTopOf="@id/detalhes_filmes_iv_cartaz_filme" />

    <TextView
        android:id="@+id/detalhes_filmes_tv_titulo_filme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detalhes_filmes_iv_cartaz_filme"
        tools:text="A cabana" />

    <ImageButton
        android:id="@+id/detalhes_filmes_iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/botao_de_favoritar"
        android:src="@drawable/ic_favorite_heart_outlined"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@id/detalhes_filmes_tv_titulo_filme"
        app:layout_constraintTop_toTopOf="@id/detalhes_filmes_tv_titulo_filme" />

    <ImageView
        android:id="@+id/detalhes_filmes_iv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icone_em_forma_de_coracao"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_favorite_heart_filled"
        app:layout_constraintStart_toStartOf="@id/detalhes_filmes_tv_titulo_filme"
        app:layout_constraintTop_toBottomOf="@id/detalhes_filmes_tv_titulo_filme"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detalhes_filmes_tv_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/detalhes_filmes_iv_likes"
        app:layout_constraintStart_toEndOf="@id/detalhes_filmes_iv_likes"
        app:layout_constraintTop_toTopOf="@id/detalhes_filmes_iv_likes"
        tools:text="1.2 Likes" />

    <ImageView
        android:id="@+id/detalhes_filmes_iv_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:contentDescription="@string/icone_em_forma_de_circulo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_view_circle_outlined"
        app:layout_constraintBottom_toBottomOf="@id/detalhes_filmes_iv_likes"
        app:layout_constraintStart_toEndOf="@id/detalhes_filmes_tv_likes"
        app:layout_constraintTop_toTopOf="@id/detalhes_filmes_iv_likes"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detalhes_filmes_tv_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/detalhes_filmes_tv_likes"
        app:layout_constraintStart_toEndOf="@id/detalhes_filmes_iv_views"
        app:layout_constraintTop_toTopOf="@id/detalhes_filmes_tv_likes"
        tools:text="3 of 10 Watched" />

    <TextView
        android:id="@+id/detalhes_filmes_tv_filmes_relacionados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filmes_relacionados"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/detalhes_filmes_iv_likes"
        app:layout_constraintTop_toBottomOf="@id/detalhes_filmes_iv_likes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detalhes_filmes_rv_filmes_relacionados"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detalhes_filmes_tv_filmes_relacionados"
        tools:listitem="@layout/item_filmes_relacionados" />

</androidx.constraintlayout.widget.ConstraintLayout>